[package]
name = "petfacts"
description = "A simple CLI program to print out cat and dog facts to the console."
documentation = ""
readme = "README.md"
repository = "https://github.com/CodeCanna/petfacts-rust"
homepage = "https://github.com/CodeCanna/petfacts-rust"
keywords = ["cli", "pets", "facts", "dog", "cat"]
categories = ["command-line-utilities"]
license-file = "LICENSE"
version = "0.1.0"
edition = "2021"

[[bin]]
edition = "2021"
name = "petfacts"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"
rand = "0.8.5"
reqwest = { version = "0.11.14", features = ["blocking"] }
