[package]
name = "petfacts"
description = "A simple CLI program to print out cat and dog facts to the console."
documentation = "https://github.com/CodeCanna/petfacts-rust"
readme = "README.md"
repository = "https://github.com/CodeCanna/petfacts-rust"
homepage = "https://github.com/CodeCanna/petfacts-rust"
keywords = ["cli", "pets", "facts", "dog", "cat"]
categories = ["command-line-utilities"]
license-file = "LICENSE"
version = "0.1.5"
edition = "2024"

[[bin]]
edition = "2024"
name = "petfacts"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"
rand = "0.9.2"
reqwest = { version = "0.12.24", features = ["blocking"] }
toml = "0.9.8"
